--- a/Deposition/DepositionTutorial.ipynb
+++ b/Deposition/DepositionTutorial.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Deposition.ipynb",
+      "name": "DepositionTutorial.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,17 +17,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "QchMbRB4wdGU",
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ADSRichards/Inhalation_Pharmacokinetics/blob/master/Deposition/DepositionTutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "**This will be a step-by-step construction of the particle deposition fraction density in humans following inhalation of spherical particles for a wide range of particle radii.**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zfIzeYm6PMqb",
+        "id": "Lmv_vCGwyT1b",
         "colab_type": "code",
         "colab": {}
       },
@@ -36,6 +35,31 @@
         "#%reset\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SDEjTxCVy_hd",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Breathing Parameters** \\\\\n",
+        "The deposition fraction depends mainly on the speed of airflow entering the trachea."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IJFc8SfKx3Zn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "BF = 15 # Breathing frequency\n",
+        "VT = 15 # Tidal volume"
       ],
       "execution_count": 0,
       "outputs": []
