--- a/Deposition/DepositionExample.ipynb
+++ b/Deposition/DepositionExample.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of DepositionTutorial.ipynb",
+      "name": "DepositionExample.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": []
@@ -67,114 +67,17 @@
       "metadata": {
         "id": "ly7X6mQmGcx8",
         "colab_type": "code",
-        "outputId": "fd8d6ddf-a564-4fe6-e6eb-12be20fbb412",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        }
+        "colab": {}
       },
       "source": [
         "rawlink = \"https://raw.githubusercontent.com/ADSRichards/Inhalation_Pharmacokinetics/master/Data/Anatomy/lung_weibel.csv\";\n",
         "data_A = pd.read_csv(rawlink)\n",
-        "data_A.head(5)"
+        "data_A.head(5)\n",
+        "\n",
+        "Ng = len(data_A) # number of generations"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Generation</th>\n",
-              "      <th>AvLength</th>\n",
-              "      <th>AvDiameter</th>\n",
-              "      <th>NumberOf</th>\n",
-              "      <th>GravityAngle</th>\n",
-              "      <th>BranchingAngle</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>10.260</td>\n",
-              "      <td>1.539</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.34907</td>\n",
-              "      <td>1.66680</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>4.070</td>\n",
-              "      <td>1.043</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>0.54105</td>\n",
-              "      <td>0.97564</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>1.624</td>\n",
-              "      <td>0.710</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>0.75049</td>\n",
-              "      <td>0.57247</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0.650</td>\n",
-              "      <td>0.479</td>\n",
-              "      <td>8.0</td>\n",
-              "      <td>0.68068</td>\n",
-              "      <td>0.33859</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "      <td>1.086</td>\n",
-              "      <td>0.385</td>\n",
-              "      <td>16.0</td>\n",
-              "      <td>0.68068</td>\n",
-              "      <td>0.70511</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   Generation  AvLength  AvDiameter  NumberOf  GravityAngle  BranchingAngle\n",
-              "0           1    10.260       1.539       1.0       0.34907         1.66680\n",
-              "1           2     4.070       1.043       2.0       0.54105         0.97564\n",
-              "2           3     1.624       0.710       4.0       0.75049         0.57247\n",
-              "3           4     0.650       0.479       8.0       0.68068         0.33859\n",
-              "4           5     1.086       0.385      16.0       0.68068         0.70511"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -191,18 +94,18 @@
       "metadata": {
         "id": "Cq6ZcjG5oLG3",
         "colab_type": "code",
-        "outputId": "27722766-2672-4ec4-bfa3-12be1e02f1f9",
+        "outputId": "6974fd6d-4632-4df6-8738-03684c1375b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
         }
       },
       "source": [
-        "g_i = data_A.Generation\n",
-        "L_i = data_A.AvLength\n",
-        "D_i = data_A.AvDiameter\n",
-        "N_i = data_A.NumberOf\n",
-        "ph_i = data_A.GravityAngle\n",
+        "g_i = data_A.Generation # generation number\n",
+        "L_i = data_A.AvLength # average length of an airway [m]\n",
+        "D_i = data_A.AvDiameter # average diameter of an airway [m]\n",
+        "N_i = data_A.NumberOf # number of airways of a generation\n",
+        "ph_i = data_A.GravityAngle # angle between two airways at gen n+1 which have branched from gen n.\n",
         "th_i = data_A.BranchingAngle\n",
         "\n",
         "A_i = []\n",
@@ -221,7 +124,7 @@
         "\n",
         "plt.xlim(0,24)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +136,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 36
         },
         {
           "output_type": "display_data",
@@ -265,19 +168,74 @@
       "metadata": {
         "id": "IJFc8SfKx3Zn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 281
+        },
+        "outputId": "c086a8fa-8fe4-460c-9fd0-b4419a4cd442"
       },
       "source": [
         "BF = 15 # Breathing frequency\n",
-        "VT = 15 # Tidal volume\n",
+        "VT = 1000 # Tidal volume\n",
         "\n",
-        "t_in = 0.5*f_br\n",
+        "t_in = 0.5*BF\n",
         "Q_in = VT/t_in/60\n",
         "\n",
-        "for i in range()\n",
-        "Q_i[i] = Q_in/N_i[i]\n",
-        "u_i[i] = Q_i[i]./A_i[i]/100\n",
-        "t_i[i] = V_i[i]/N_i[i]/Q_i[i]*60"
+        "Q_i = []\n",
+        "u_i = []\n",
+        "V_i = []\n",
+        "t_i = []\n",
+        "\n",
+        "for i in range(0,Ng):\n",
+        "    Q_i.append(Q_in/N_i[i])\n",
+        "    u_i.append(Q_i[i]/A_i[i]/100)\n",
+        "    V_i.append(A_i[i]/100*L_i[i]/100)\n",
+        "    t_i.append(V_i[i]/N_i[i]/Q_i[i]*60)\n",
+        "    \n",
+        "plt.plot(g_i, t_i, \"ok\");\n",
+        "plt.xlabel('Lung Depth [cm]');\n",
+        "plt.ylabel('Cross-Sectional Area [cm^2]');\n",
+        "\n",
+        "plt.xlim(0,24);"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEICAYAAACuxNj9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAG55JREFUeJzt3X18JVWd5/HPt1eFidBKQ7OKbhLl\nUZEHJSgPIrKgjtOiLqPLQ4/KDEwUh1HwAdGgNC4tDyIKKoutOLx2ic7OyAy6trOzioKIKAblYWUV\nETotoNOIYjMTbVS+80dV4BLTqbpNqm8l+b5fr/vqe06dU/W7l5Bfqs6pU7JNRETETBb1OoCIiGi/\nJIuIiKiUZBEREZWSLCIiolKSRUREVEqyiIiISkkWERFRKckiIiIqJVlERESlx/U6gNmy3XbbeXBw\nsNdhRETMGTfccMPPbS+t03beJIvBwUHGxsZ6HUZExJwhabxu21yGioiISkkWERFRKckiIiIqJVlE\nRESlJIuIiKi0YJPF6Ogog4ODLFq0iMHBQUZHR3sdUkREa82bqbPdGB0dZXh4mImJCQDGx8cZHh4G\nYPny5b0MLSKilRbkmcXIyMjDiWLSxMQEIyMjPYooIqLdFmSyWLt2bVf1EREL3YJMFv39/V3VR0Qs\ndAsyWaxcuZK+vr5H1fX19bFy5coeRRQR0W6NDXBLOgw4AlgH2PYZU7ZvCZwH3A3sDJxt+7Zy2xpg\nTdn0btuzOuo8OYg9MjLC2rVr6e/vZ+XKlRncjojYCNme/Z1KfcDNwO62N0i6HLjI9pUdbU4FHrJ9\nrqQ9yu0HldtW2F7RzTGHhoachQQjIuqTdIPtoTptm7oMtT8wbntDWb4WWDalzTLgOgDbtwB7SVpc\nbjtI0imS/pukAxqKMSIiamrqMtT2wAMd5fVlXZ0264F3276+PEP5rqRX2L596kEkDQPDkMHpiIgm\nNXVmsQ7YuqO8uKyr1cb29eW/E8CNwIHTHcT2KttDtoeWLq31/I6IiNgETSWL64ABSVuU5QOB1ZKW\ndFxqWk1xuYpyzOIm2+slHSrpjzv2tRPw44bijIiIGhq5DGV7QtIJwIWS7gVutn2lpHOBXwBnAxcA\n50k6jSIhHFd2XweskPQ8YAfgH2x/o4k4IyKinkZmQ/VCZkNFRHSnDbOhIiJiHkmyiIiISkkWERFR\nKckiIiIqJVlERESlJIuIiKiUZBEREZWSLCIiolKSRUREVEqyiIiISkkWERFRKckiIiIqJVlERESl\nJIuIiKiUZBEREZWSLCIiotKMT8qT9PqK/vfY/sosxhMRES1U9VjVNwBfn2H7AUCSRUTEPFeVLP7O\n9ic2tlHS8bMcT0REtNCMYxYzJYpy+6dmN5yIiGijygFuSc+VtEtHeb8aYxkRETGPzJgsJL0XuAy4\nQtKHy+px4K+aDiwiItqj6sxiW9u72342cLWkj9j+KTCxGWKLiIiWqBrg/snkG9tXSLpf0lmAmw0r\nIiLapOrMYh9Jh08WbF8FfAPYt8mgIiKiXarOLE4DlnRW2F4t6eDmQoqIiLaZMVnYvgO4Y5r67zYW\nUUREtE6ttaEkvbHpQCIior3q3GfxOuA/boZYIiKipaoWEnwZcBxwyOYJJyIi2qhqgPtZwLdtdz1V\nVtJhwBHAOsC2z5iyfUvgPOBuYGfgbNu3dWzfHvgecJbtj3V7/IiImD1Vl6E+Cuwo6aBudiqpD7gY\nONn2CmBPSYdOaXYSsNb2WcCHgUs6+i8CzgTGujluREQ0o2ohwd8DxwB/3uV+9wfGbW8oy9cCy6a0\nWQZcVx7nFmAvSYvLbe+iSB6/7PK4ERHRgMoBbtsPAid2ud/tgQc6yuvLuso2kv4zMGH721UHkTQs\naUzS2L333ttliBERUVetqbO2H7UWlKSdKrqsA7buKC8u6+q0eSXwR5JOBfYAXiJp2jMb26tsD9ke\nWrp0afUHiYiITVI1wA2ApP8EvIZHfrm/CDhshi7XAQOStigvRR0IXCRpCfA72+uB1RSXq66RtAdw\nU1l/UsdxdwPGbP9Nl58rIiJmUa1kAXwW+BzF8uQA98/U2PaEpBOACyXdC9xs+0pJ5wK/AM4GLgDO\nk3QasBPFFN2HSfoLYE9gW0k/tv1PdT9URETMLtWZFSvpIttv7ijvZPv2RiPr0tDQkMfGMnkqIqIu\nSTfYHqrTtu6ZxVcknQH8uCwfDrx2U4KLiIi5p9YAN/BWigHoZ5SvJTM3j4iI+aTumcVttk+eLEja\nuaF4IiKiheomi5+W01cnL0O9DvjLZkKKiIi2qZssjqZ4Qt6LyvIezYQTERFtVDdZnGz7i5MFSXms\nakTEAlJ3gPshSS8HkLQMuKu5kCIiom3qJosjgRvK998D3t1MOBER0UZ1k8UtttcB2L6HnFlERCwo\ndccsniVpH4rZUDsCuzYXUkREtE3dZPFB4NMUazXdyJR1nCIiYn6rlSxs/wA4oOFYIiKipWYcs5B0\nZMX218xuOBER0UZVZxavlbTFDNufS7F0eUREzGNVyeIWioUDN+a7sxhLRES01IzJwvYZmyuQiIho\nr7r3WURExAKWZBEREZU2KVlI2na2A4mIiPaqdZ+FpEXAy4ClZVUeqxoRsYDUvYP7E8AE8CzgO+Sx\nqhERC0rdy1B32n4rcKXtEeCfG4wpIiJapm6yeEr573aSng4c2FA8ERHRQnWTxa3lQ4/+CbgZ+H/N\nhRQREW1TdyHBizuKGa+IiFhg6s6GGgTOBx4AVgN32f5mc2FFRESb1L0MNQJcANwJXEGmzUZELCh1\nk8UPbF8NTNh+EPhZgzFFRETL1E0We0raD9hS0nOAnRqMKSIiWqbuTXnnAJ+ieKzqS8ljVSMiFpS6\nyeIw4A22f9RkMBER0U51k8WRwCXd7FjSYcARwDrAU5+NIWlL4DzgbmBn4Gzbt0naHvgb4BvA9sAT\ngL+2/VA3x4+IiNlTN1l8E/jNZEHSsbYv3VhjSX3AxcDutjdIulzSobav7Gh2ErDW9rmS9qBIRgeV\nMV1h+5Plvm4C9geu7eJzRUTELKo7wH0wsEbS1yR9DXhvRfv9gXHbG8rytcCyKW2WAdcB2L4F2EvS\nYtv3dCSKrYGtgPGacUZERAPqnlncwSP3VojqAe7tKW7gm7S+rKvTZj2ApKOAE4Bzbd813UEkDQPD\nAP39/ZUfIiIiNk2tMwvbR9keL19rKNaHmsk6YOuO8uKyrnYb238LHAIcLelPNhLXKttDtoeWLl06\nXZOIiJgFXT0pT9Luki6keL7FTK4DBiRtUZYPBFZLWiJpcVm3muJyFeWYxU2210s6WNLzAcpB7XHg\nmd3EGRERs6vyMlT5C/9I4I0Us5Y+CozO1Mf2hKQTgAsl3QvcbPtKSecCvwDOplg+5DxJp1Hc5Dd5\naes3wDslfY/izEMUs6MiIqJHZHvjG4uziKMoprF+HDjI9orNE1p3hoaGPDY21uswIiLmDEk32B6q\n07bqMtSTgS8CJ5XTXnOvQ0TEAjTjZSjbr5e0DfBnkp4KPA1A0nNs5wFIERELROWYhe1fUoxTIOmg\nctzhIMrB6YiImP/q3mcBgO1rgGskvaaheCIiooW6mjo7yfbnZjuQiIhor01KFhERsbAkWURERKUZ\nxywkbWzBpTfZfk8D8URERAtVDXBfBayhuIu6Uz+QZBERsUBUJYsTbX9pauXGFvaLiIj5acYxi+kS\nRWnqcuMRETGP1RrglnSMpB9Kuk/SXcD5DccVEREtUnc21AHAsygeRPR0ilVjIyJigaibLO4qny2x\nZVl+WkPxREREC9Vd7uP5kg4HNki6kj+cHRUREfNYrWRh+wgASV8CbqV4El5ERCwQXd3Bbfv3tr8A\nLGsonoiIaKFaZxaSVgDHAw9SXIJaDFzaWFQREdEqtccsgP5ykBtJr24upIiIaJu6l6G+P5koSr9q\nIpiIiGinumcWL5Y0DtxRlvuBHZsJKSIi2qZusvgxMPl0PAHHNRNORES0Ud2ps0cBSNrW9n3AexuN\nKiIiWqXu2lAHSPoJcKekcUn7NRxXRES0SN0B7jcA+9heDLyAYhptREQsEHWTxY9srwOw/TPg9uZC\nioiItqk7wL2rpCMoZkPtCOzcXEgREdE2dZPF+4APAXsCNwLvbCyiiIhonbqzoX4KHDNZlrQb8NOm\ngoqIiHaZMVlIeoXtL0p635RNLwIOay6siIhok6ozi32BLwLPBa7oqL+/aseSDgOOANYBtn3GlO1b\nAucBd1OMgZxt+zZJ+wInAd8DdgWut/3Jeh8nIiKaMGOysH16+fYttn8CIGk74Ksz9ZPUB1wM7G57\ng6TLJR1q+8qOZicBa22fK2kP4BLgIOCpwAW2r5f0eGCdpH+0/fNN+oQREfGY1Z06++cd7x8PnFnR\nfn9g3PaGsnwtf/gMjGWUD1GyfQuwl6TFtr9g+/qOdr8DflszzoiIaEDVmMWewN7A3pJeX1Yvonie\nxUy2Bx7oKK8v6+q0Wd9RdyLwAdvTrnIraRgYBujv768IKSIiNlXVmcU2wDM6/n0G8HTg/Ip+64Ct\nO8qLy7rabSQdAzzR9oc3dhDbq2wP2R5aunRpRUgREbGpqsYsrgaulvQZ2z/qYr/XAQOStigvRR0I\nXCRpCfA72+uB1RSXq64pxyxuKuuRdDywle0zy20bbN/W/ceLiIjZUHfM4r9KOhaKSz+SXjxTY9sT\nwAnAhZLOBG4uB7dPBd5cNruAIqGcBrydctlzSa+iuAHw1ZKuAj4D7NDFZ4qIiFkm29WNpPNtv62j\nfI7tdzUaWZeGhoY8NjbW6zAiIuYMSTfYHqrTtu6Zxc+mlCvvs4iIiPmj7tpQO0p6B8VqszsCA82F\nFBERbVP3zOLtwBKK51hsA7yjsYgiIqJ16i4k+K/lQPS2wH22H2o2rIiIaJO6j1V9KcWzLC4BjpL0\nxkajioiIVql7GepwYDfgWtuZyhoRscDUTRZ32f4NMDnPdsNMjSMiYn6pOxtqF0mnArtJOhF4WoMx\nRUREy9Q9sziJYu2m7SiWEG/VDXkREdGsurOhHgDe03AsERHRUjOeWUh6i6Rzyvf7Slon6ReSXrF5\nwouIiDaougx1IPCB8v37y9fOwNFNBhUREe1SdRnqVtu/krQV8HzglbZ/K6mb5cojImKOqzqzmHwi\n3hHAVbYnH2+6RXMhRURE21SdWfxK0g3AM4GXA5TLfjy76cAiIqI9qp6U935JlwO/tH1PWX0N8NnG\nI4uIiNaonDpr+/uT7yW90vYXmg0pIiLapu5NeZPe1EgUERHRat0mCzUSRUREtFq3yeJPG4kiIiJa\nre7zLN4vaT/gFZLuKRcVjIiIBaLumcWDtr8FvAXYC3hicyFFRETb1L4MJWlXYJ3te4GJ5kKKiIi2\nqfs8i8cDXwWOLhcR3Ke5kCIiom3qLlF+OnB6R9UXmwknIiLaqKsBbklHSrpbUh5+FBGxgHQ7wP3X\nwN7AVs2FFBERbZMB7oiIqFR3gPtxFAPcx2SAOyJi4ak7wL0CWNFRlQHuiIgFpO4A966SrpX0gKRr\nyktSVX0Ok3SRpBWSTp9m+5aSPibp3ZI+LWmXjm07SbpC0ue6+zgREdGEumMWpwAnAwPAO4EZl/uQ\n1AdcDJxcnpXsKenQKc1OAtbaPgv4MHBJx7YXAF+qGVtERDSsbrL4ge3rbf+inBV1W0X7/YFx2xvK\n8rXAsiltlgHXAdi+BdhL0uKyPAo8WDO2iIhoWN1ksYuk50l6sqR9gJ0q2m8PPNBRXl/WddumVUZH\nRxkcHGTRokUMDg4yOjra65AiIjaLurOhPgR8GtgTuBE4rqL9OmDrjvLisq7bNjOSNAwMA/T393fT\ntWujo6MMDw8zMVHMGh4fH2d4eBiA5cuXN3rsiIheq3tm8VLgDba3sv1C2z+saH8dMCBpi7J8ILBa\n0pLJS03AaorLVUjaA7jJ9vpugre9yvaQ7aGlS5d207VrIyMjDyeKSRMTE4yMjDR63IiINqibLI4E\n7qm7U9sTwAnAhZLOBG62fSXFwPiby2YXUCSU04C303G2IulVwOHAbpJOqXvcJq1du7ar+oiI+aTu\nZahvAr+ZLEg61valM3Ww/WXgy1PqTul4/2vgrzbS9/PA52vGtln09/czPj4+bX1ExHxX98ziYGCN\npK9J+hrw3gZjaqWVK1fS19f3qLq+vj5WrlzZo4giIjafumcWdwCvLd+L6gHueWdyEHtkZIS1a9fS\n39/PypUrM7gdEQuCbPc6hlkxNDTksbGxXocRETFnSLrB9lCdtjNehpJ0oqSrJW3bUXeFpKc+1iAj\nImLuqBqzOAR4re37OureBZzRXEgREdE2Vcni+7YfdaNceY/FvzQXUkREtE1VstjQZX1ERMxDVcli\niaQdOivK8YonNRdSRES0TdXU2Q8CX5B0J/Az4KnAzsDLmw4sIiLaY8ZkYftnkl4IvIJipdlvA/9Y\n3n0dERELROVNebYfBP5hM8QSEREtVXe5j4iIWMCSLCIiolKSRUREVEqyiIiISkkWERFRKckiIiIq\nJVlERESlJIuIiKiUZBEREZWSLCIiolKSRUREVEqyiIiISkkWERFRKcliMxgdHWVwcJBFixYxODjI\n6Ohor0OKiOhK5RLl8diMjo4yPDzMxMQEAOPj4wwPDwOwfPnyXoYWEVFbziwaNjIy8nCimDQxMcHI\nyEiPIoqI6F6SRcPWrl3bVX1ERBslWTSsv7+/q/qIiDZKsmjYypUr6evre1RdX18fK1eu7FFEERHd\nS7Jo2PLly1m1ahUDAwNIYmBggFWrVtUa3N7UWVSbu19ELAC2G3kBhwEXASuA06fZviXwMeDdwKeB\nXTq2/RnwIeBc4I11jrfPPvt4Prnsssvc19dn4OFXX1+fL7vsslb1m+w7MDBgSR4YGKjVJ/3SL/16\nH2ORAmr+Tq/bsJsX0AfcDmxRli8HDp3S5lTglPL9HsA15funAzcCKsvfAXauOuZ8SxaT/yGnvgYG\nBlrVb64ktfRLv7b263WM7nGyOBS4sqP8NuD8KW2uAQ7qKK8HFgPHAZd01F8IvKXqmPMtWUia9pe3\npFb1mytJLf3Sr639eh2je5wsjgau6CgfD1w2pc0Pgb07yncBO1FclvpIR/2ZwJkbOc4wMAaM9ff3\nz/gFzTW9/gGq22+uJLX0S7+29ut1jK75e72pAe51wNYd5cVlXZ02dfoCYHuV7SHbQ0uXLn3MQbfJ\nps6i2tz9NnVqcPqlX/pt/mPV2b5RdbNKNy82MmYBLAEWl3UZs6gwVwbm2n5NOP3Sr839eh2je3kZ\nysUv+ZcAn6C4jHR6WXcucGr5/o+AjwOnAZfyh7OhPkIxI2pBzoaaS+ZCUku/9Gtzv7kwG2ryr/c5\nb2hoyGNjY70OIyJizpB0g+2hOm1zU15ERFRKsoiIiEpJFhERUSnJIiIiKiVZREREpXkzG0rSAxR3\nhccjtgN+3usgWijfy/TyvUxvPn8vA7Zr3dE8n57B/cO6U8AWCklj+U7+UL6X6eV7mV6+l0IuQ0VE\nRKUki4iIqDSfksWqXgfQQvlOppfvZXr5XqaX74V5NMAdERHNmU9nFhER0ZA5PxtK0mHAERTPvLDt\nM3ocUitI+hbwm7L4e9uH9jKeXpH0FIqVj/eyvW9ZtyVwHnA3sDNwtu3behfl5reR7+VY4E088nNz\nie3/2ZsINz9JO1J8J9+leFTCfbbfL2kJcDZwB8XPy3ts/0vvIu2NOZ0sJPUBFwO7294g6XJJh9q+\nstextcD/sb2i10G0wAuBzwN7d9SdBKy1fa6kPYBLgIN6EVwPTfe9ABxle83mD6cVlgB/a/vzAJJu\nlbQa+EvgK7b/TtLhFH9ovK6HcfbEXL8MtT8wbntDWb4WWNbDeNpkD0nvkrRC0oL9Tmx/DnhgSvUy\n4Lpy+y3AXpIWb+7Yemkj3wvAiZLeIel95V/UC4bt70wmitIi4N/o+HlhAf+OmdNnFsD2PPoHfn1Z\nF3CO7esl/Qfg65IesP31XgfVEhv7uVnfm3Ba42pgte17Jf0J8PcUT7hccCT9F+Cfbf9AUufPy3pg\nG0mPs/273kW4+c31M4vaz+teaGxfX/77e+Aa4JDeRtQq+bmZhu07bd9bFr8KHFz+sbGgSDqE4v+X\nk8uqzp+XxcAvF1qigLmfLK4DBiRtUZYPBFb3MJ5WkLSbpOM6qnYGftyreFpoNcUlTMoxi5tsL/Sz\nCiSdJWnyasPOwJryj40Fo7xk+zLgrcBTJO1Px88LC/h3zJy/z0LSS4DXAPcCv81sKJC0A/Ax4HsU\nfwk9Hnib7Yd6GlgPSDoYeD3wx8B/p3iuOxSDlD8FdgI+sABnQ033vQwDzwHuBPYALrD9rZ4FuZlJ\n2ofiUtzk85mfCHwc+AJwDjAO7AicuhBnQ835ZBEREc2b65ehIiJiM0iyiIiISkkWERFRKckiIiIq\nJVlERESlJIuYkyQ9X9JVkr4pab/NdMxdJF1Rrhm0QtKZkj5WTlXe1H3uLenF5futJV0i6dIa/X4p\n6TRJT9vUY5f7eWK5nzslDT6WfcX8lmQRc1J5h/pVwDc3170A5b0YVwC32l5h+zTgkxTLqTxpE3e7\nN/Dicv8PAHVXef2V7TNt372Jx6U85r/ZPpPiHoKIjZrra0NFPEq5/PjFALaPlTRMsaT0YLli6IeB\n/02xfMOzgWNsr5H0DOBC4EaKdYDeA7zF9v+Y6Xi2b5I0BhwNXCzpBGBX4OfAk4BTgMPLfX+WYvnv\nIeB04C7g1cCTJa2YjBvYQdJHgL2Az9j+ZI3P/T7gCcAGimXHXyPpfwGDwJeBAygS3VLgucB3bb+v\nar8RD7OdV15z8gWsAM6bpv7FwKUd5TUd7y8F3li+fyfw9vL93wNHlu936uwzZd/HAp+bUncO8AHg\nWcD/55GbXS8FXlW+vwo4rHz/AuA7HftbMSX2a8v32wG3bCSOzs/0MuBLHeXjyn8HKc4YFgFPBiaA\nrcry2in7uwoY7PV/07za+8plqFiIJpf2uJdHFojbHfhR+f6OLvc3AKylWCrjIeBdkk4Ffkux3Mqk\nyf3eXh5vY24HsP1zHr3g4cbsOdmn7HdJx7Y7bT9k+35gne1/dbHsy4Jb+iUem1yGinmjXBRwe+B+\nyl/SkvqnaTrdGje3ArtQPCXtmV0c8znAvhRPmHsK8GvbZ5fbnkeRMCY9kyJh7FIeD+D3RVNtwyOJ\nods1eG6iHPcoj/sXwGVd7iNiRkkWMSdJGgJeBDxB0mll9TMolmO/Clgk6b3AGuBJko6mWHl3T+B1\nkn5IMZawjaSdgHcBHy0Tzk+Y5hd22e5wYNfymE8AtgUOLv9yv1/SJySdT3HWsgPw7o5d7CvpIOD5\nFMkF4HpgOfBBisHy1wF7lp/vOWXsf2r78o19F7b/r6T9JJ1FMSZyn+0HJR1PsSrzIRRnP08qn9NA\n+f5425+a8YuOKGUhwQhA0s7AvbbvL89GPm37sFnc/1XAsZ6lR5ZKWmN7cDb2Ve7vKmYxvph/MmYR\nURgALpT0TmAEeNts7bh8RsIA8ObZ2idwi6RTH8s9HvDwfRanUpwJ/Xp2Qov5KGcWERFRKWcWERFR\nKckiIiIqJVlERESlJIuIiKiUZBEREZWSLCIiotK/A4uBzHfzHB+RAAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MS1ua6lNIi-b",
+        "colab_type": "text"
+      },
+      "source": [
+        "Setting grid of possible particle diameters which may be inhaled"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c-0PgNyAIjMS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Nd = 400\n",
+        "dmin = 1.5e-9\n",
+        "dmax = 2.0e-4\n",
+        "d = np.logspace(np.log10(dmin),np.log10(dmax),Nd) # PARTICLE diameter grid [m]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -310,7 +268,20 @@
         "pa = 1.1372 # density of air at body temp [kg/m^3]\n",
         "ell = 0.066e-6 # mean free path of air molecules at body temp [m]\n",
         "\n",
+        "# Cunningham slip correction factor (for diffusion and sedimentation)\n",
+        "Cd = []\n",
+        "for di in range(0,Nd):\n",
+        "    Cd.append( 1 + ell/d[di]*(2.514 + 0.8*np.exp(pow(-0.55,d[di]/ell))) )\n",
+        "\n",
+        "\n",
         "# impaction specific\n",
+        "#stk = []\n",
+        "#for gi in range(0,Ng):\n",
+        "#  stki = []\n",
+        "#  for di in range(0,Nd):\n",
+        "#      stki.append(Cd[di]*(po*d[di]*d[di]*u_i[gi]/(9*eta*D_i[gi])))\n",
+        "\n",
+        "\n",
         "\n",
         "# gravity specific\n",
         "g = 9.81 # gravitational acceleration [m/s^2]\n",
